[gd_scene load_steps=2 format=3 uid="uid://b3gohbk6ej5mt"]

[ext_resource type="Script" path="res://scenes/structures/template/struct_template.gd" id="1_o1hbo"]

[node name="Struct" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource( "1_o1hbo" )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
